--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ optional = true
 version = "0.7"
 #default-features = false
 git = "https://github.com/DAuth-Network/rand-sgx"
-tag = "v0.7.3_sgx1.1.3"
+branch = "new_sgx"
 
 [dependencies.zeroize]
 version = "1.1.0"
